--- a/bibtex.bib
+++ b/bibtex.bib
@@ -5,18 +5,9 @@
 	year = {2021},
 }
 
-@inproceedings{billot_learning_2020,
-	title = {A {Learning} {Strategy} for {Contrast}-agnostic {MRI} {Segmentation}},
-	author = {Billot, Benjamin and Greve, Douglas N. and Van Leemput, Koen and Fischl, Bruce and Iglesias, Juan Eugenio and Dalca, Adrian},
-	booktitle = {Medical {Imaging} with {Deep} {Learning}},
-	pages = {75--93},
-	year = {2020},
-}
-
-@inproceedings{billot_partial_2020,
-	title = {Partial {Volume} {Segmentation} of {Brain} {MRI} {Scans} of {Any} {Resolution} and {Contrast}},
-	author = {Billot, Benjamin and Robinson, Eleanor and Dalca, Adrian and Iglesias, Juan Eugenio},
+@inproceedings{billot_robust_2020,
+	title = {{Robust} {Segmentation} of {Brain} {MRI} in the {Wild} with {Hierarchical} {CNNs} and no {Retraining}},
+	author = {Billot, Benjamin and Colin, Magdamo and Das, Sudeshna and Iglesias, Juan Eugenio},
 	booktitle = {MICCAI: Medical {Image} {Computing} and {Computer} {Assisted} {Intervention}},
-	pages = {177--187},
-	year = {2020},
+	year = {2022},
 }
