new loss functions

--- a/bibtex.bib
+++ b/bibtex.bib
@@ -1,13 +1,21 @@
-@article{billot_synthseg_2021,
-	title = {SynthSeg: {Domain} {Randomisation} for {Segmentation} of {Brain} {MRI} {Scans} of any {Contrast} and {Resolution}},
-	journal = {arXiv:2107.09559 [cs]},
+@article{billot_synthseg_2023,
+	title = {SynthSeg: {Segmentation} of brain {MRI} scans of any contrast and resolution without retraining},
 	author = {Billot, Benjamin and Greve, Douglas N. and Puonti, Oula and Thielscher, Axel and Van Leemput, Koen and Fischl, Bruce and Dalca, Adrian V. and Iglesias, Juan Eugenio},
-	year = {2021},
+	journal = {{Medical} {Image} {Analysis}},
+	year = {2023},
+    volume = {86},
+	pages = {102789},
+    issn = {1361-8415},
+    doi = {10.1016/j.media.2023.102789},
 }
 
-@inproceedings{billot_robust_2020,
-	title = {{Robust} {Segmentation} of {Brain} {MRI} in the {Wild} with {Hierarchical} {CNNs} and no {Retraining}},
-	author = {Billot, Benjamin and Colin, Magdamo and Das, Sudeshna and Iglesias, Juan Eugenio},
-	booktitle = {MICCAI: Medical {Image} {Computing} and {Computer} {Assisted} {Intervention}},
-	year = {2022},
+@article{billot_robust_2023,
+	title = {{Robust} machine learning segmentation for large-scale analysis of heterogeneous clinical brain {MRI} datasets},
+	author = {Billot, Benjamin and Colin, Magdamo Cheng, You and Das, Sudeshna and Iglesias, Juan Eugenio},
+	journal = {{Proceesings} of the {National} {Academy} of {Sciences} ({PNAS})},
+	year = {2023},
+	volume = {120},
+	number = {9}
+	pages = {1--10},
+    doi = {10.1073/pnas.2216399120},
 }
