fixed PNAS bibtex

--- a/bibtex.bib
+++ b/bibtex.bib
@@ -12,10 +12,10 @@
 @article{billot_robust_2023,
 	title = {{Robust} machine learning segmentation for large-scale analysis of heterogeneous clinical brain {MRI} datasets},
 	author = {Billot, Benjamin and Colin, Magdamo Cheng, You and Das, Sudeshna and Iglesias, Juan Eugenio},
-	journal = {{Proceesings} of the {National} {Academy} of {Sciences} ({PNAS})},
+	journal = {{Proceedings} of the {National} {Academy} of {Sciences} ({PNAS})},
 	year = {2023},
 	volume = {120},
-	number = {9}
+	number = {9},
 	pages = {1--10},
     doi = {10.1073/pnas.2216399120},
 }
